# Statistical-Arbitrage-Tool

./: .gitignore  CMakeLists.txt  Dockerfile.frontend  Dockerfile.trading-engine  Dockerfile.websocket-server  FIXES_APPLIED.md  LICENSE  README.md  cointegrated_pairs.csv  config.py  directory.txt  docker-compose.yml  example_usage.py  nginx.conf  requirements.txt  statistical_arbitrage_pairs.py  test_fixes.py  test_structure.py
.claude/: settings.local.json
cbot/: PriceDataExtractorBot.cs  StatisticalArbitrageBot.cs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: LatencyHistogram.tsx  OrderBookVisualization.tsx  SystemHealthIndicators.tsx  TickChart.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: index.ts
include/core/: metrics_collector.h  order_book.h  shared_memory_manager.h  types.h
src/core/: metrics_collector.cpp  order_book.cpp  shared_memory_manager.cpp  trading_engine.cpp
src/server/: websocket_server.cpp
